Alignment fixes for UC discovery page..

--- a/HexiCloud/public_html/css/hc-common.css
+++ b/HexiCloud/public_html/css/hc-common.css
@@ -113,7 +113,7 @@ header-content {
 }
 
 navigationbarleft {
-    width: 260px;
+    width: 320px;
     top: 0;
 }
 
