--- a/HexiCloud/public_html/css/hc-usecasediscovery.css
+++ b/HexiCloud/public_html/css/hc-usecasediscovery.css
@@ -161,10 +161,6 @@ and open the template in the editor.
     background: #73CC3B;
 }
 
-#useCaseDiscoveryPage #tabCoreTechnicalKnowledge .core-tech-chapter-text {
-    margin-left: 10px;
-}
-
 #useCaseDiscoveryPage #tabCoreTechnicalKnowledge .status-btn {
     height: 30px;
     width: 140px;
